--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "splendid-firebase",
+  "name": "SplendidGameWeb",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
@@ -13,5 +13,10 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "splendidFirebaseApp"
+  "moduleName": "splendidGameWebApp",
+  "homepage": "https://github.com/BenjD90/SplendidGameWeb",
+  "authors": [
+    "Benjamin DANIEL"
+  ],
+  "license": "GNU"
 }
